--- a/src/main/resources/fxml/home.fxml
+++ b/src/main/resources/fxml/home.fxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TreeView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.alexkitc.controller.HomeController">
     <children>
@@ -29,7 +32,23 @@
                                 <AnchorPane />
                             </items>
                         </SplitPane>
-                        <HBox prefHeight="32.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+                        <HBox prefHeight="32.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                     <children>
+                        <HBox prefHeight="32.0" prefWidth="414.0" />
+                        <HBox prefHeight="32.0" prefWidth="687.0" />
+                        <HBox fx:id="bottomRightHBox" alignment="CENTER_RIGHT" prefHeight="32.0" prefWidth="235.0">
+                           <children>
+                              <Text fx:id="memoryDetailText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                                 <HBox.margin>
+                                    <Insets left="10.0" right="6.0" />
+                                 </HBox.margin>
+                              </Text>
+                              <ProgressBar fx:id="memoryProgressbar" prefWidth="150.0" progress="0.0" />
+                           </children>
+                           <opaqueInsets>
+                              <Insets />
+                           </opaqueInsets></HBox>
+                     </children></HBox>
                     </children>
                 </AnchorPane>
             </children>
