feat: 增加连接异常提示

--- a/src/main/resources/fxml/new-conn.fxml
+++ b/src/main/resources/fxml/new-conn.fxml
@@ -95,7 +95,7 @@
                         <Insets top="16.0" />
                      </VBox.margin>
                   </TextField>
-                  <Label text="_">
+                  <Label fx:id="testConnText" text="_">
                      <VBox.margin>
                         <Insets top="24.0" />
                      </VBox.margin>
