--- a/src/main/resources/css/app.css
+++ b/src/main/resources/css/app.css
@@ -1,3 +1,9 @@
+.root {
+    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.5), 0, 0, 0, 0);
+    -fx-background-color: rgba(255,255,255,0.5);
+    -fx-background-radius: 5;
+}
+
 .button:hover {
     -fx-cursor: hand;
 }
